@@ -1,49 +1,51 @@
 plugins {
-    id "java-library"
+	id "java-library"
 	id "org.asciidoctor.jvm.convert"
-	id "org.asciidoctor.jvm.pdf"
 	id "org.springframework.boot.auto-configuration"
+	id "org.springframework.boot.configuration-properties"
 	id "org.springframework.boot.conventions"
 	id "org.springframework.boot.deployed"
-	id "org.springframework.boot.internal-dependency-management"
-    id "org.springframework.boot.optional-dependencies"
+	id "org.springframework.boot.optional-dependencies"
 }
 
 description = "Spring Boot Actuator AutoConfigure"
 
 configurations {
-	asciidoctorExtensions
 	documentation
 }
 
 dependencies {
-	asciidoctorExtensions(platform(project(":spring-boot-project:spring-boot-dependencies")))
 	asciidoctorExtensions("org.springframework.restdocs:spring-restdocs-asciidoctor")
+	asciidoctorExtensions("io.spring.asciidoctor:spring-asciidoctor-extensions-section-ids")
 
-	api(platform(project(":spring-boot-project:spring-boot-dependencies")))
 	api(project(":spring-boot-project:spring-boot-actuator"))
+	api(project(":spring-boot-project:spring-boot"))
+	api(project(":spring-boot-project:spring-boot-autoconfigure"))
 
-	implementation(project(":spring-boot-project:spring-boot"))
-	implementation(project(":spring-boot-project:spring-boot-autoconfigure"))
 	implementation("com.fasterxml.jackson.core:jackson-databind")
 	implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
-	implementation("org.springframework:spring-core")
-	implementation("org.springframework:spring-context")
 
-	optional(platform(project(":spring-boot-project:spring-boot-dependencies")))
 	optional("ch.qos.logback:logback-classic")
+	optional("com.datastax.oss:java-driver-core") {
+		exclude group: "org.slf4j", module: "jcl-over-slf4j"
+	}
 	optional("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
 	optional("com.github.ben-manes.caffeine:caffeine")
 	optional("com.hazelcast:hazelcast")
 	optional("com.hazelcast:hazelcast-spring")
-	optional("com.sun.mail:jakarta.mail")
 	optional("com.zaxxer:HikariCP")
 	optional("io.dropwizard.metrics:metrics-jmx")
 	optional("io.lettuce:lettuce-core")
+	optional("io.micrometer:micrometer-observation")
 	optional("io.micrometer:micrometer-core")
-	optional("io.micrometer:micrometer-jersey2")
+	optional("io.micrometer:micrometer-tracing")
+	optional("io.micrometer:micrometer-tracing-bridge-brave")
+	optional("io.micrometer:micrometer-tracing-bridge-otel")
+	optional("io.micrometer:micrometer-tracing-reporter-wavefront")
 	optional("io.micrometer:micrometer-registry-appoptics")
-	optional("io.micrometer:micrometer-registry-atlas")
+	optional("io.micrometer:micrometer-registry-atlas") {
+		exclude group: "javax.inject", module: "javax.inject"
+	}
 	optional("io.micrometer:micrometer-registry-datadog")
 	optional("io.micrometer:micrometer-registry-dynatrace")
 	optional("io.micrometer:micrometer-registry-elastic")
@@ -54,53 +56,84 @@ dependencies {
 	optional("io.micrometer:micrometer-registry-jmx")
 	optional("io.micrometer:micrometer-registry-kairos")
 	optional("io.micrometer:micrometer-registry-new-relic")
+	optional("io.micrometer:micrometer-registry-otlp")
 	optional("io.micrometer:micrometer-registry-prometheus")
-	optional("io.micrometer:micrometer-registry-stackdriver")
-	optional("io.prometheus:simpleclient_pushgateway")
+	optional("io.micrometer:micrometer-registry-stackdriver") {
+		exclude group: "commons-logging", module: "commons-logging"
+		exclude group: "javax.annotation", module: "javax.annotation-api"
+	}
+	optional("io.prometheus:simpleclient_pushgateway") {
+		exclude group: "javax.xml.bind", module: "jaxb-api"
+	}
 	optional("io.micrometer:micrometer-registry-signalfx")
 	optional("io.micrometer:micrometer-registry-statsd")
 	optional("io.micrometer:micrometer-registry-wavefront")
-	optional("io.projectreactor.netty:reactor-netty")
+	optional("io.zipkin.reporter2:zipkin-sender-urlconnection")
+	optional("io.opentelemetry:opentelemetry-exporter-zipkin")
+	optional("io.opentelemetry:opentelemetry-exporter-otlp")
+	optional("io.projectreactor.netty:reactor-netty-http")
 	optional("io.r2dbc:r2dbc-pool")
 	optional("io.r2dbc:r2dbc-spi")
 	optional("jakarta.jms:jakarta.jms-api")
+	optional("jakarta.persistence:jakarta.persistence-api")
 	optional("jakarta.servlet:jakarta.servlet-api")
 	optional("javax.cache:cache-api")
-	optional("net.sf.ehcache:ehcache")
-	optional("org.apache.activemq:activemq-broker")
-	optional("org.apache.commons:commons-dbcp2")
+	optional("org.apache.activemq:activemq-client-jakarta")
+	optional("org.apache.commons:commons-dbcp2") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
 	optional("org.apache.kafka:kafka-clients")
+	optional("org.apache.kafka:kafka-streams")
+	optional("org.apache.logging.log4j:log4j-api")
 	optional("org.apache.tomcat.embed:tomcat-embed-core")
 	optional("org.apache.tomcat.embed:tomcat-embed-el")
 	optional("org.apache.tomcat:tomcat-jdbc")
 	optional("org.aspectj:aspectjweaver")
-	optional("org.eclipse.jetty:jetty-server")
-	optional("org.elasticsearch:elasticsearch")
-	optional("org.elasticsearch.client:elasticsearch-rest-client")
+	optional("org.cache2k:cache2k-micrometer")
+	optional("org.cache2k:cache2k-spring")
+	optional("org.eclipse.angus:angus-mail")
+	optional("org.eclipse.jetty:jetty-server") {
+		exclude group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-servlet-api"
+	}
+	optional("org.elasticsearch.client:elasticsearch-rest-client") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
 	optional("org.flywaydb:flyway-core")
 	optional("org.glassfish.jersey.core:jersey-server")
 	optional("org.glassfish.jersey.containers:jersey-container-servlet-core")
-	optional("org.hibernate:hibernate-core")
+	optional("org.hibernate.orm:hibernate-core")
+	optional("org.hibernate.orm:hibernate-micrometer")
 	optional("org.hibernate.validator:hibernate-validator")
 	optional("org.influxdb:influxdb-java")
-	optional("org.jolokia:jolokia-core")
-	optional("org.liquibase:liquibase-core")
+	optional("org.liquibase:liquibase-core") {
+		exclude group: "javax.activation", module: "javax.activation-api"
+		exclude group: "javax.xml.bind", module: "jaxb-api"
+	}
 	optional("org.mongodb:mongodb-driver-reactivestreams")
 	optional("org.mongodb:mongodb-driver-sync")
+	optional("org.neo4j.driver:neo4j-java-driver")
+	optional("org.quartz-scheduler:quartz")
 	optional("org.springframework:spring-jdbc")
 	optional("org.springframework:spring-jms")
 	optional("org.springframework:spring-messaging")
 	optional("org.springframework:spring-webflux")
 	optional("org.springframework:spring-webmvc")
 	optional("org.springframework.amqp:spring-rabbit")
-	optional("org.springframework.data:spring-data-cassandra")
+	optional("org.springframework.batch:spring-batch-core")
+	optional("org.springframework.data:spring-data-cassandra") {
+		exclude group: "org.slf4j", module: "jcl-over-slf4j"
+	}
 	optional("org.springframework.data:spring-data-couchbase")
+	optional("org.springframework.data:spring-data-jpa")
 	optional("org.springframework.data:spring-data-ldap")
 	optional("org.springframework.data:spring-data-mongodb")
-	optional("org.springframework.data:spring-data-neo4j")
 	optional("org.springframework.data:spring-data-redis")
-	optional("org.springframework.data:spring-data-solr")
+	optional("org.springframework.data:spring-data-elasticsearch") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
+	optional("org.springframework.graphql:spring-graphql")
 	optional("org.springframework.integration:spring-integration-core")
+	optional("org.springframework.kafka:spring-kafka")
 	optional("org.springframework.security:spring-security-config")
 	optional("org.springframework.security:spring-security-web")
 	optional("org.springframework.session:spring-session-core")
@@ -108,31 +141,38 @@ dependencies {
 
 	testImplementation(project(":spring-boot-project:spring-boot-test"))
 	testImplementation(project(":spring-boot-project:spring-boot-tools:spring-boot-test-support"))
+	testImplementation("io.micrometer:micrometer-observation-test")
 	testImplementation("io.projectreactor:reactor-test")
 	testImplementation("io.r2dbc:r2dbc-h2")
 	testImplementation("com.squareup.okhttp3:mockwebserver")
 	testImplementation("com.jayway.jsonpath:json-path")
 	testImplementation("io.undertow:undertow-core")
-	testImplementation("io.undertow:undertow-servlet") {
-		exclude group: "org.jboss.spec.javax.annotation", module: "jboss-annotations-api_1.2_spec"
-		exclude group: "org.jboss.spec.javax.servlet", module: "jboss-servlet-api_4.0_spec"
+	testImplementation("io.undertow:undertow-servlet")
+	testImplementation("jakarta.xml.bind:jakarta.xml.bind-api")
+	testImplementation("org.apache.activemq:artemis-jakarta-client") {
+		exclude group: "commons-logging", module: "commons-logging"
 	}
-	testImplementation("javax.xml.bind:jaxb-api")
+	testImplementation("org.apache.activemq:artemis-jakarta-server") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
 	testImplementation("org.apache.logging.log4j:log4j-to-slf4j")
 	testImplementation("org.aspectj:aspectjrt")
 	testImplementation("org.assertj:assertj-core")
-	testImplementation("org.eclipse.jetty:jetty-webapp")
-	testImplementation("org.glassfish.jersey.ext:jersey-spring5")
+	testImplementation("org.awaitility:awaitility")
+	testImplementation("org.cache2k:cache2k-api")
+	testImplementation("org.eclipse.jetty:jetty-webapp") {
+		exclude group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-servlet-api"
+	}
+	testImplementation("org.glassfish.jersey.ext:jersey-spring6")
 	testImplementation("org.glassfish.jersey.media:jersey-media-json-jackson")
 	testImplementation("org.hamcrest:hamcrest")
 	testImplementation("org.hsqldb:hsqldb")
 	testImplementation("org.junit.jupiter:junit-jupiter")
 	testImplementation("org.mockito:mockito-core")
+	testImplementation("org.mockito:mockito-junit-jupiter")
 	testImplementation("org.skyscreamer:jsonassert")
+	testImplementation("org.springframework:spring-core-test")
 	testImplementation("org.springframework:spring-orm")
-	testImplementation("org.springframework.data:spring-data-elasticsearch") {
-		exclude group: "org.elasticsearch.client", module: "transport"
-	}
 	testImplementation("org.springframework.data:spring-data-rest-webmvc")
 	testImplementation("org.springframework.integration:spring-integration-jmx")
 	testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
@@ -140,49 +180,33 @@ dependencies {
 	testImplementation("org.springframework.security:spring-security-test")
 	testImplementation("org.yaml:snakeyaml")
 
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testRuntimeOnly("jakarta.management.j2ee:jakarta.management.j2ee-api")
+	testRuntimeOnly("jakarta.transaction:jakarta.transaction-api")
+	testRuntimeOnly("org.cache2k:cache2k-core")
+	testRuntimeOnly("org.opensaml:opensaml-core:4.0.1")
+	testRuntimeOnly("org.opensaml:opensaml-saml-api:4.0.1")
+	testRuntimeOnly("org.opensaml:opensaml-saml-impl:4.0.1")
+	testRuntimeOnly("org.springframework:spring-aspects")
 	testRuntimeOnly("org.springframework.security:spring-security-oauth2-jose")
 	testRuntimeOnly("org.springframework.security:spring-security-oauth2-resource-server")
-}
-
-compileJava {
-	options.compilerArgs << "-parameters"
-}
-
-compileTestJava {
-	options.compilerArgs << "-parameters"
-}
-
-test {
-	outputs.dir("${buildDir}/generated-snippets")
+	testRuntimeOnly("org.springframework.security:spring-security-saml2-service-provider") {
+		exclude group: "org.opensaml", module: "opensaml-core"
+		exclude group: "org.opensaml", module: "opensaml-saml-api"
+		exclude group: "org.opensaml", module: "opensaml-saml-impl"
+	}
 }
 
 task dependencyVersions(type: org.springframework.boot.build.constraints.ExtractVersionConstraints) {
 	enforcedPlatform(":spring-boot-project:spring-boot-dependencies")
 }
 
-tasks.withType(org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask) {
-	dependsOn dependencyVersions
-	baseDirFollowsSourceDir()
-	doFirst {
-		def versionConstraints = dependencyVersions.versionConstraints
-		def integrationVersion = versionConstraints["org.springframework.integration:spring-integration-core"]
-		def integrationDocs = String.format("https://docs.spring.io/spring-integration/docs/%s/reference/html/", integrationVersion)
-		attributes "spring-integration-docs": integrationDocs
-	}
-}
-
 asciidoctor {
-	configurations "asciidoctorExtensions"
-	dependsOn test
 	sources {
 		include "index.adoc"
 	}
 }
 
-asciidoctorPdf {
-	configurations "asciidoctorExtensions"
-	dependsOn test
+task asciidoctorPdf(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
 	sources {
 		include "index.adoc"
 	}
@@ -193,12 +217,43 @@ task zip(type: Zip) {
 	duplicatesStrategy "fail"
 	from(asciidoctorPdf.outputDir) {
 		into "pdf"
+		rename { "spring-boot-actuator-web-api.pdf" }
 	}
 	from(asciidoctor.outputDir) {
-		into "html"
+		into "htmlsingle"
 	}
 }
 
 artifacts {
 	documentation zip
+}
+
+tasks.named("test") {
+	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+	filter {
+		excludeTestsMatching("org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation.*")
+	}
+}
+
+def documentationTest = tasks.register("documentationTest", Test) {
+	filter {
+		includeTestsMatching("org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation.*")
+	}
+	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+	outputs.dir("${buildDir}/generated-snippets")
+	predictiveSelection {
+		enabled = false
+	}
+}
+
+tasks.withType(org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask) {
+	dependsOn dependencyVersions
+	doFirst {
+		def versionConstraints = dependencyVersions.versionConstraints
+		def integrationVersion = versionConstraints["org.springframework.integration:spring-integration-core"]
+		def integrationDocs = String.format("https://docs.spring.io/spring-integration/docs/%s/reference/html/", integrationVersion)
+		attributes "spring-integration-docs": integrationDocs
+	}
+	dependsOn documentationTest
+	inputs.dir("${buildDir}/generated-snippets").withPathSensitivity(PathSensitivity.RELATIVE).withPropertyName("generatedSnippets")
 }
